Fix build issues with spring boot